cambie el footer a mi gusto

--- a/portafolio.html
+++ b/portafolio.html
@@ -195,7 +195,9 @@
     </section>
 
     <footer>
+      <div class="t">
       <p>© Página de Valeska Aguayo</p>
+    </div>
     </footer>
 
     <script
